@@ -1,7 +1,7 @@
 looked, look
 text
 hello
-said, seven
+said
 rotten day, rotten-day, rotten
 tomorrow
 seven
