@@ -1,7 +1,7 @@
 looked, look
-text, rotten
+text, create
 hello
-said, seven
+said
 rotten day, rotten-day, rotten
 tomorrow, rotten
 seven
