@@ -1,9 +1,9 @@
 permanent
 permanent
-permanent, pimpernel, supernatant
+permanent
 Permanent
 Permanent
-Permanent, Pimpernel, Supernatant
+Permanent
 UNESCO
 UNESCO
 UNESCO's
