@@ -2,7 +2,7 @@ foo
 foo
 Bar
 Bar
-baz., Bar
-baz., Bar
+baz.
+baz.
 Quux.
 Quux.
