@@ -1,1 +1,1 @@
-Brasilia, Xxxxxxxxxx, Brilliancy, Brilliance, Brazilian, Brassily
+Brasilia, Xxxxxxxxxx, Brilliant, Brazilian, Brassily, Brilliance
