@@ -1,3 +1,9 @@
+2011-01-21 Németh László <nemeth at OOo>:
+	* suggestmgr.*: fix hun#2970237 (limit wild suggestions):
+	- limited compound word suggestions
+	- improved and limited ngram based suggestions
+	* tests/*.sug: modified test files
+
 2011-01-17 Németh László <nemeth at OOo>:
 	* suggestmgr.cxx: fix hun#3158994 and hun#3159027 (missing csconv table
 	  using awkward 8bit capitalization of UTF-8 encoded dictionary words with PHONE
